@startuml Patient_Session_Subsystem
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

class Patient <<entity: patients>> {
  - id : String  <<PK>>
  - doctorEmail : String
  - name : String
  - age : Integer
  - gender : String
  - email : String
  - phone : String
  - chronicConditions : List<ChronicCondition>  <<jsonb>>
  - allergies : List<PatientAllergy>  <<jsonb>>
  - emergencyContact : EmergencyContact  <<jsonb>>
  - insuranceDetails : InsuranceDetails  <<jsonb>>
  - createdAt : Instant
}

class ClinicalSession <<entity: sessions>> {
  - id : String  <<PK>>
  - patientId : String
  - doctorEmail : String
  - status : String  <<default:SCHEDULED>>
  - soap : SoapNote  <<jsonb>>
  - transcription : String
  - audioUrl : String
  - edits : String  <<jsonb>>
  - createdAt : Instant
}

class SoapNote <<inner>> {
  - s : String
  - o : String
  - a : String
  - p : String
}

class ChronicCondition {
  name : String
  icdCode : String
  diagnosedYear : Integer
}
class PatientAllergy {
  substance : String
  severity : Severity
  reaction : String
}
enum “PatientAllergy.Severity” as Severity {
  mild
  moderate
  severe
}
class EmergencyContact {
  name : String
  relationship : String
  phone : String
}
class InsuranceDetails {
  provider : String
  policyNumber : String
  validUntil : String
}

interface PatientRepository <<JpaRepository<Patient,String>>> {
  + findByDoctorEmail(email) : List<Patient>
  + findByIdAndDoctorEmail(id, email) : Optional<Patient>
}

interface SessionRepository <<JpaRepository<ClinicalSession,String>>> {
  + findByPatientId(patientId) : List<ClinicalSession>
  + findByDoctorEmail(email) : List<ClinicalSession>
}

interface PatientService {
  + getPatientsForDoctor(email) : List<Patient>
  + getPatient(id, email) : Patient
  + createPatient(email, CreatePatientRequest) : Patient
  + updatePatient(email, id, UpdatePatientRequest) : Patient
  + deletePatient(email, id) : void
}

class PatientServiceImpl <<@Service>> {
  - patientRepository : PatientRepository
  - auditService : AuditService
}

interface SessionService {
  + getSessionsByDoctor(email) : List<ClinicalSession>
  + getSessionsByPatient(email, patientId) : List<ClinicalSession>
  + createSession(email, session) : ClinicalSession
  + updateSession(email, id, session) : ClinicalSession
  + transitionSession(email, id, targetStatus) : ClinicalSession
  + deleteSession(id, email) : void
}

class SessionServiceImpl <<@Service>> {
  - sessionRepository : SessionRepository
  - patientRepository : PatientRepository
  - auditService : AuditService
  - publisher : ConsultationEventPublisher
}

class PatientController <<@RestController: /api/patients>> {
  + getMyPatients() : List<Patient>
  + createPatient() : ResponseEntity
  + updatePatient() : ResponseEntity
  + deletePatient() : ResponseEntity
}

class SessionController <<@RestController: /api/sessions>> {
  + getMySessions() : List<ClinicalSession>
  + createSession() : ClinicalSession
  + updateSession() : ClinicalSession
  + transitionSession() : ClinicalSession
  + deleteSession() : void
}

ClinicalSession +-- SoapNote
PatientAllergy +-- Severity
Patient “1” *-- “0..*” ChronicCondition
Patient “1” *-- “0..*” PatientAllergy
Patient “1” *-- “0..1” EmergencyContact
Patient “1” *-- “0..1” InsuranceDetails
ClinicalSession “0..*” --> “1” Patient : patientId

PatientServiceImpl ..|> PatientService
SessionServiceImpl ..|> SessionService
PatientServiceImpl --> PatientRepository
SessionServiceImpl --> SessionRepository
SessionServiceImpl --> PatientRepository
PatientController --> PatientService
SessionController --> SessionService
@enduml